Fixed image sizing issue on mobile devices

--- a/public/styles.css
+++ b/public/styles.css
@@ -65,8 +65,11 @@ main {
 }
 
 .meme-image {
-  max-width: 150%;
+  max-width: 200%;
   border-radius: 3px;
+  width: 1000px;
+  min-height: 400px;
+  max-height: 500px;
 }
 
 .meme-text {
